# http-server

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
tools/cmake/: CompilerWarnings.cmake
